--- a/shell-term-fm/rxvt-unicode/HISTORY
+++ b/shell-term-fm/rxvt-unicode/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* CONFIGURE: clarify what extended ISO 14755 modes means
+
 2014-06-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependency on xproto
 	* CONFIGURE, BUILD: make features configurable
