--- a/xorg-lib/wayland/HISTORY
+++ b/xorg-lib/wayland/HISTORY
@@ -1,3 +1,6 @@
+2014-09-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.0
+
 2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.0
 
