--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-19 Pol Vinogradov <vin.public@gmail.com>
+	* gnome3-libs/adwaita-icon-theme: new spell, Adwaita icon theme for GNOME
+
 2014-09-18 Jeremy Blosser <jblosser@sourcemage.org>
 	* graphics/irrlicht: move spell to games grimoire
 
