--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2014-09-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.16.3
+
 2014-08-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.16.2
 
