--- a/utils/flashrom/HISTORY
+++ b/utils/flashrom/HISTORY
@@ -1,3 +1,6 @@
+2014-09-20 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.9.7
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
