--- a/utils/xdg-user-dirs/HISTORY
+++ b/utils/xdg-user-dirs/HISTORY
@@ -1,3 +1,6 @@
+20`4-09-21 TreeveJelbrt <treeve@sourcemage.org>
+	* DETAILS: version 0.15
+
 2008-03-14 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.10
 
