--- a/net/openvpn/HISTORY
+++ b/net/openvpn/HISTORY
@@ -1,5 +1,12 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-09-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3.4
+	* DEPENDS: made PAM optional; added missing dependencies -- iproute2,
+	  libselinux; set SYSTEM-LOGGER as suggest dependency; added missing
+	  flags
+	* INSTALL: quoting paths
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-02-13 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2.3.2
