--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-09-23  Ismael Luceno <ismael@sourcemage.org>
+	* editors/vbindiff: new spell, Visual Binary Diff
+
 2014-09-21  Treeve Jelbert <treeve@sourcemage.org>
 	* move xdg-user-dirs to utils
 	* python-pypi/grit-i18n: added
