--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,9 @@
+2014-09-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: version 4.3 patchlevel 25
+	* patches/bash-42-*: removed
+	* patches/bash-43-{001..025}: add patches for patchlevel 25
+	* DETAILS: SECURITY_PATCH++, this fixes CVE-2014-6271
+
 2013-05-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: SECURITY_PATCH++, introduce variable BASH_PATCHLEVEL
 	* PRE_BUILD: use variable BASH_PATCHLEVEL to determine which
