--- a/graphics-libs/giblib/HISTORY
+++ b/graphics-libs/giblib/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: harfbuzz, libpng
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: freetype2, libx11, libxext
 
