--- a/e/imlib2/HISTORY
+++ b/e/imlib2/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: glib2, harfbuzz, pcre
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing X11 dependencies
 
