--- a/xorg-lib/libxcomposite/HISTORY
+++ b/xorg-lib/libxcomposite/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing dependencies
+
 2010-10-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.3
 
