--- a/xorg-lib/libxdamage/HISTORY
+++ b/xorg-lib/libxdamage/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing dependencies
+
 2010-06-26 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.3
 	  SOURCE matches upstream posted SHA1
