--- a/xorg-lib/libxfixes/HISTORY
+++ b/xorg-lib/libxfixes/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing dependencies
+
 2011-03-09 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 5.0
 	  SOURCE matches upstream posted SHA1
