--- a/xorg-lib/libxft/HISTORY
+++ b/xorg-lib/libxft/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
