--- a/xorg-lib/libxinerama/HISTORY
+++ b/xorg-lib/libxinerama/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2010-10-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 
