--- a/xorg-lib/libxpm/HISTORY
+++ b/xorg-lib/libxpm/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@souremage.org>
+	* DEPENDS: missing depends
+
 2010-11-01 Treeve Jelbert <treeve@souremage.org>
 	* DETAILS: version 3.5.9
 
