--- a/xorg-lib/libxvmc/HISTORY
+++ b/xorg-lib/libxvmc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2010-09-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.6
 
