--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: depends libogg if libvorbis is enabled
+
 2014-09-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.18.14
 
