--- a/xorg-extras/xterm/HISTORY
+++ b/xorg-extras/xterm/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: freetype2 was both hard and optional dep
+
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 287
 
