--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: nspr
+
 2014-09-23 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.10.9
 	* DEPENDS: farsight2 -> farstream, fixed its flags
