--- a/wm-addons/slock/HISTORY
+++ b/wm-addons/slock/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: libx11, libxext
+
 2009-08-24 Donald Johnson <ltdonny@gmail.com>
 	* DETAILS: Updated source
 
