--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2014-05-25 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: version 24.5.0
 	* DEPENDS: use nss version 3.16 
