--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: pcre
+
 2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS, CONFIGURE: fix libressl support
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: tweak
