--- a/xorg-app/x11perf/HISTORY
+++ b/xorg-app/x11perf/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: missing depends
+
 2011-03-04 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.5.3
 	  SOURCE matches upstream posted SHA1
