--- a/xorg-lib/xtrans/HISTORY
+++ b/xorg-lib/xtrans/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.5
+
 2014-03-31  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.4
 
