--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2014-09-25 Ismael Luceno <ismael@sourcemage.org>
 	* utils/lxc: new spell, Userspace tools for the Linux kernel containers
 	* graphics/dcmtk: new spell, DICOM Toolkit
+	* science-libs/itk: new spell, toolkit for performing registration
+	  and segmentation
 
 2014-09-23 Pol Vinogradov <vin.public@gmail.com>
 	* chat-im/pidgin-window-merge: new spell, one window plugin for Pidgin
