--- a/graphics-libs/glu/HISTORY
+++ b/graphics-libs/glu/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
