--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-07-12 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.4
 
