--- a/http/webkitgtk3/HISTORY
+++ b/http/webkitgtk3/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-08-02 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.5.1
 	* CONFIGURE, DEPENDS, BUILD: converted to cmake build system,
