--- a/libs/libva/HISTORY
+++ b/libs/libva/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-08-27 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: version 1.3.1
 	* DEPENDS: more of them, with options
