--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: giflib => GIFLIB
 
