--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
