--- a/xorg-driver/glamor/HISTORY
+++ b/xorg-driver/glamor/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: MESALIB
 
