--- a/xorg-driver/xf86-video-modesetting/HISTORY
+++ b/xorg-driver/xf86-video-modesetting/HISTORY
@@ -1,3 +1,6 @@
+2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: MESALIB => mesalib
+
 2014-06-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS version 0.9.0
 
