--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,7 @@
+2014-09-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD, CVE-2014-7169.diff: fix CVE 2014 7169
+
 2014-09-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: version 4.3 patchlevel 25
 	* patches/bash-42-*: removed
