--- a/devel/icecream/HISTORY
+++ b/devel/icecream/HISTORY
@@ -1,2 +1,5 @@
+2014-09-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.0.1
+
 2011-04-07 Arjan Bouter <abouter@sourcemage.org>
 	* BUILD, DETAILS, init.d/icecream, init.d/icecream-scheduler: spell created
