--- a/devel/distcc/HISTORY
+++ b/devel/distcc/HISTORY
@@ -1,3 +1,6 @@
+2014-09-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.2rc1
+
 2011-07-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1
 	* PRE_BUILD: moved to BUILD
