--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-09-26 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Cleanup dependencies
+
 2014-09-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 32.0.3, security update
 
