--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2014-09-26 Remko van der Vossen <wich@sourcemage.org>
+	* BUILD: fix build with existing LDFLAGS (like --as-needed)
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: depends libogg if libvorbis is enabled
 
