--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,6 @@
+2014-09-26 Remko van der Vossen <wich@sourcemage.org>
+	* CONFIGURE: properly migrate from openssl to SSL provider
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: pcre
 
