--- a/shell-term-fm/tilda/HISTORY
+++ b/shell-term-fm/tilda/HISTORY
@@ -1,3 +1,7 @@
+2014-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.1.13
+	* focus.patch: dropped, fixed by upstream
+
 2014-06-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.1.12
 
