--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,7 @@
+2014-09-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.18.16
+	* BUILD: cleaned up; error-safe++
+
 2014-09-26 Remko van der Vossen <wich@sourcemage.org>
 	* BUILD: fix build with existing LDFLAGS (like --as-needed)
 
