--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-09-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.4.5
+
 2014-08-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.4.3
 
