--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-09-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: icu is only needed if libxmls2 uses it
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: icu
 
