--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-09-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.27 (devel)
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: gettext, libxml2
 
