--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2014-09-28 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Simplified branch version handling
+
 2014-08-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.2.17 and 3.1.26
 
