--- a/devel/nodejs/HISTORY
+++ b/devel/nodejs/HISTORY
@@ -1,3 +1,8 @@
+2014-09-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.10.32; quoting paths
+	* BUILD: use INSTALL_ROOT, OPTS
+	* DEPENDS: added gcc, zlib and openssl dependencies
+
 2012-10-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.8.12
 
