--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* net/megatools: new spell, command line client for mega.co.nz
+	* http/phantomjs: new spell, headless WebKit scriptable with a
+	  JavaScript API
 
 2014-09-25 Ismael Luceno <ismael@sourcemage.org>
 	* utils/lxc: new spell, Userspace tools for the Linux kernel containers
