--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,5 +1,9 @@
-2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: fix bad with-SSL usage
+2014-09-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.33 (stable)
+	* DEPENDS: corrected SSL case
+
+2014-08-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: fix bad with-SSL usage
 
 2014-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.32 (stable); SECURITY_PATCH++
@@ -8,7 +12,6 @@
 
 2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: openssl => SSL
-	* SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-08-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.3.29 (previous); SECURITY_PATCH++
