--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 9.15
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: fontconfig
 
