--- a/graphics-libs/libcaca/HISTORY
+++ b/graphics-libs/libcaca/HISTORY
@@ -1,3 +1,7 @@
+2014-10-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.99.beta19
+	* DEPENDS: optional_depends PYTHON added
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
