--- a/devel/m4/HISTORY
+++ b/devel/m4/HISTORY
@@ -1,3 +1,7 @@
+2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.17
+	* glibc215.patch, PRE_BUILD: deleted - builds with glibc-2.20
+
 2012-12-08 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply the patch
 	* glibc215.patch: added, to fix build with glibc >=2.15
