--- a/audio-libs/openal-soft/HISTORY
+++ b/audio-libs/openal-soft/HISTORY
@@ -1,3 +1,6 @@
+2014-10-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.16.0
+
 2012-12-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.15.1
 	* avutil.patch, PRE_BUILD: removed
