--- a/devel/automake/HISTORY
+++ b/devel/automake/HISTORY
@@ -1,3 +1,6 @@
+2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.14.1
+
 2013-07-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.14
 
