--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,7 @@
+2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.40.5
+	* DEPENDS: no longer uses gtk+2
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: add missing dependencies
 
