--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,9 @@
+2014-10-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++ (final ShellShock fixes for CVE-2014-6277
+	  and CVE-2014-6278 found by Michal Zalewski)
+	* DEPENDS: bash 4.3 strictly relies on readline 6.3
+	* patches/bash43-028: added, official patch with src line replacement
+
 2014-09-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, patches/bash43-027: add the latest patch against ShellShock
 	  issues; SECURITY_PATCH++
