--- a/audio-drivers/jack2/HISTORY
+++ b/audio-drivers/jack2/HISTORY
@@ -1,3 +1,6 @@
+2014-10-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: added primary dropbox mirror
+
 2014-08-26 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: needs libsamplerate
 	* DETAILS: scm=git
