--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,6 @@
+2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.13
+
 2014-05-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.12
 
