--- a/xorg-app/xcb-util-keysyms/HISTORY
+++ b/xorg-app/xcb-util-keysyms/HISTORY
@@ -1,3 +1,6 @@
+2014-10-02 Treeve Jelbert >trave@sourcemage.org?
+	* DETAILS: version 0.4.0
+
 2012-05-31 Treeve Jelbert >trave@sourcemage.org?
 	* DETAILS: version 0.3.9
 
