--- a/utils/kexec-tools/HISTORY
+++ b/utils/kexec-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Use disable_pic function to fix CFLAGS
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.4
 
