--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: fixed SOURCE_URL[0], seems ftp is not available anymore
+
 2014-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.8.14
 
