--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.36
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: glib2, libpng, pcre
 
