--- a/devel/ghc/HISTORY
+++ b/devel/ghc/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 7.8.3
+
 2014-05-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: version 7.8.2
 
