--- a/devel/ccache/HISTORY
+++ b/devel/ccache/HISTORY
@@ -1,3 +1,7 @@
+2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.2
+	* samba.gpg:add 5594ADB8: Joel Rosdahl <joel@rosdahl.net>
+
 2013-01-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.9
 
