--- a/utils/grep/HISTORY
+++ b/utils/grep/HISTORY
@@ -1,3 +1,6 @@
+2014-11-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.21
+
 2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.20
 
