--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-24 Ismael Luceno <ismael@sourcemage.org>
+	* crypto/signify: new spell, OpenBSD cryptographic signing tool
+
 2014-11-23 Ismael Luceno <ismael@sourcemage.org>
 	* devel/cmockery: new spell, Lightweight Unit Test library for
 	  C
