--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-11-25 Ismael Luceno <ismael@sourcemage.org>
+	* net/torsocks: new spell, use socks-friendly applications with
+	  tor
+
 2014-11-24 Ismael Luceno <ismael@sourcemage.org>
 	* crypto/signify: new spell, OpenBSD cryptographic signing tool
 
