--- a/crypto/libksba/HISTORY
+++ b/crypto/libksba/HISTORY
@@ -1,3 +1,6 @@
+2014-11-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.3.2, SECURITY_PATCH=1
+
 2012-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.3.0
 
