--- a/utils/pciutils/HISTORY
+++ b/utils/pciutils/HISTORY
@@ -1,3 +1,6 @@
+2014-11-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.0
+
 2014-10-26 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 3.2.1
 	* DEPENDS: Added optional dependency on kmod
