--- a/utils/file-rename-utils/HISTORY
+++ b/utils/file-rename-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.7.3
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
