--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.9.1
+
 2014-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add libevdev
 
