--- a/utils/cronie/HISTORY
+++ b/utils/cronie/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.12
+
 2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.11
 	* CONFIGURE: corrected syscrontab flags; dropped deprecated flags
