--- a/utils/ipmitool/HISTORY
+++ b/utils/ipmitool/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.15
+
 2014-10-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.14
 
