--- a/graphics/maim/HISTORY
+++ b/graphics/maim/HISTORY
@@ -1,2 +1,5 @@
+2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3.37
+
 2014-11-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD: created spell, version 2.3.36
