--- a/audio-players/mikmod/HISTORY
+++ b/audio-players/mikmod/HISTORY
@@ -1,3 +1,7 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed WEBSITE
+	  updated spell to 3.2.6
+
 2010-04-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: disabled check for libmikmod, added -lm to LDFLAGS
 	  to make the spell build
