--- a/audio-libs/libmikmod/HISTORY
+++ b/audio-libs/libmikmod/HISTORY
@@ -1,3 +1,7 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed WEBSITE
+	  updated spell to 3.3.7
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
