--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.12
+
 2014-11-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.10
 	  SECURITY++, fixes CVE-2014-363 CVE-2014-7824
