--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.19.4
+
 2014-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.18.16
 	* BUILD: cleaned up; error-safe++
