--- a/editors/emacs/HISTORY
+++ b/editors/emacs/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS, CONFIGURE: Allow selecting the X toolkit to use
+
 2014-07-16 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Depedency for SVG support is on librsvg2
 
