--- a/ruby-raa/ruby-1.9/HISTORY
+++ b/ruby-raa/ruby-1.9/HISTORY
@@ -1,5 +1,9 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-11-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.9.3-p551; SECURITY_PATCH++ (CVE-2014-8080,
+	  CVE-2014-8090)
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2013-12-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.3-p484; swapped ibiblio with CDN mirror;
