--- a/crypto/polarssl/HISTORY
+++ b/crypto/polarssl/HISTORY
@@ -1,3 +1,7 @@
+2014-11-27 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3.9
+	  Fixed SOURCE_URL[0]
+
 2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.1
 
