--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2014-11-27 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.0
+
 2014-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1;3
 
