--- a/crypto/gpa/HISTORY
+++ b/crypto/gpa/HISTORY
@@ -1,3 +1,6 @@
+2014-11-27 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.9.6
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
