--- a/audio-libs/flac/HISTORY
+++ b/audio-libs/flac/HISTORY
@@ -1,3 +1,6 @@
+2014-11-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.1
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: added Altivec opcodes support; readability++; changed
 	  default values as per `configure --help'; included static libs flags
