--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2014-11-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.16.4
+
 2014-09-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.16.3
 
