--- a/python-pypi/pygments/HISTORY
+++ b/python-pypi/pygments/HISTORY
@@ -1,3 +1,7 @@
+2014-11-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0.1; don't do useless doc-ing
+	* DEPENDS: switched to PYTHON
+
 2013-03-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6
 
