--- a/odbc-drivers/odbcfb/HISTORY
+++ b/odbc-drivers/odbcfb/HISTORY
@@ -1,3 +1,7 @@
+2014-11-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.3.144
+	* PRE_BUILD: deleted
+
 2013-07-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.2.153
 	* PRE_BUILD: adjust
