--- a/mail/exim/HISTORY
+++ b/mail/exim/HISTORY
@@ -1,3 +1,6 @@
+2014-11-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, BUILD: added ability to build with experimental SPF support
+
 2014-08-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.84
 
