--- a/python-pypi/six/HISTORY
+++ b/python-pypi/six/HISTORY
@@ -1,3 +1,6 @@
+2014-11-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.0
+
 2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.3
 
