--- a/python-pypi/alembic/HISTORY
+++ b/python-pypi/alembic/HISTORY
@@ -1,3 +1,6 @@
+2014-11-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 0.7.0
+
 2014-05-04 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 0.6.5
 
