--- a/devel/libtool/HISTORY
+++ b/devel/libtool/HISTORY
@@ -1,3 +1,6 @@
+2014-11-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.4.4
+
 2011-10-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.4.2
 
