--- a/graphics/maim/HISTORY
+++ b/graphics/maim/HISTORY
@@ -1,3 +1,6 @@
+2014-11-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3.38
+
 2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.3.37
 
