--- a/xorg-lib/libx11/HISTORY
+++ b/xorg-lib/libx11/HISTORY
@@ -1,3 +1,6 @@
+2014-11-30 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Fix build, -Os causes missing symbols
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: libpthread-stubs
 
