--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2014-12-01 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 34.0, SECURITY_PATCH++
+	* DEPENDS: removed pysqlite, changed nss subdependency to 3.17.x
+
 2014-09-26 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Cleanup dependencies
 
