--- a/net/openvpn/HISTORY
+++ b/net/openvpn/HISTORY
@@ -1,3 +1,6 @@
+2014-12-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3.6
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.3.5
 	* DEPENDS: added missing pkcs11-helper dependency
