--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,3 +1,6 @@
+2014-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.45; SECURITY_PATCH++
+
 2014-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.44; dropped broken mirror
 
