--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,3 +1,6 @@
+2014-12-03 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3.4-20141027
+
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* PROVIDES: Provide AWK
 	* CONFIGURE, INSTALL: Let the user choose the primary AWK implementation
