--- a/net/minidlna/HISTORY
+++ b/net/minidlna/HISTORY
@@ -1,3 +1,6 @@
+2014-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.1.4
+
 2014-05-05 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.2
 
