--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCH_LEVEL=1
+	* BUILD: added, --enable-xinput
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: libxdmcp
 
