--- a/xorg-lib/libxft/HISTORY
+++ b/xorg-lib/libxft/HISTORY
@@ -1,3 +1,6 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD, fix-freetype-includes.patch: Added to compile against freetype2 2.5.0+
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: missing depends
 
