--- a/net/socat/HISTORY
+++ b/net/socat/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Add autoconf for `autoconf` in PRE_BUILD
+	* PRE_BUILD, fix-linux-errqueue.h-not-found.patch: Added to fix compilation
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
