--- a/utils/supermin/HISTORY
+++ b/utils/supermin/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 5.1.11
+	* PRE_BUILD: Removed, no longer needed
+
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* Created
 
