--- a/utils/augeas/HISTORY
+++ b/utils/augeas/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.3.0
+	  SOURCE_URL updated
+
 2010-11-04 Robert Figura <template@sourcemage.org>
 	* DETAILS: update to 0.7.3
 
